--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
+<div>
   <h1>
     Tada Welcome to {{title}}!!
   </h1>
