--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -21,7 +21,7 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn btn-primary">Show Image</button>
+                            <button class="btn btn-primary" (click)="toggleImage()">{{showImage ? 'Hide' : 'Show'}} Image</button> <!-- if showImage is true display hide else display show JS-->
                         </th>
                             <th>Product</th>
                             <th>Code</th>
@@ -33,7 +33,8 @@
                 <tbody>
                     <tr *ngFor="let product of products">
                         <td>
-                            <img [src]="product.imageUrl"
+                            <img *ngIf="showImage" 
+                                 [src]="product.imageUrl"
                                  [title]="product.productName" 
                                  [style.width.px]= "imageWidth" 
                                  [style.margin.px]= "imageMargin"
